refactor: home api 코드 리팩토링