@@ -1,24 +1,22 @@
 package com.owori.domain.member.service;
 
 import com.owori.config.security.jwt.JwtToken;
-import com.owori.domain.family.entity.Family;
 import com.owori.domain.member.client.KakaoMemberClient;
 import com.owori.domain.member.dto.client.KakaoMemberResponse;
 import com.owori.domain.member.dto.request.EmotionalBadgeRequest;
 import com.owori.domain.member.dto.request.MemberDetailsRequest;
 import com.owori.domain.member.dto.request.MemberProfileRequest;
 import com.owori.domain.member.dto.request.MemberRequest;
-import com.owori.domain.member.dto.response.FindHomeResponse;
+import com.owori.domain.member.dto.response.MemberHomeResponse;
 import com.owori.domain.member.dto.response.MemberJwtResponse;
-import com.owori.domain.member.dto.response.MemberProfileResponse;
 import com.owori.domain.member.entity.AuthProvider;
 import com.owori.domain.member.entity.Member;
 import com.owori.domain.member.exception.NoSuchProfileImageException;
 import com.owori.domain.member.mapper.MemberMapper;
 import com.owori.domain.member.repository.MemberRepository;
-import com.owori.domain.saying.dto.response.FindSayingByFamilyResponse;
+import com.owori.domain.saying.dto.response.SayingByFamilyResponse;
 import com.owori.domain.saying.mapper.SayingMapper;
-import com.owori.domain.schedule.dto.response.FindDDayByFamilyResponse;
+import com.owori.domain.schedule.dto.response.ScheduleDDayResponse;
 import com.owori.domain.schedule.service.ScheduleService;
 import com.owori.global.dto.ImageResponse;
 import com.owori.global.exception.EntityNotFoundException;
@@ -31,7 +29,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -124,32 +121,11 @@ public class MemberService implements EntityLoader<Member, UUID> {
         authService.getLoginUser().updateEmotionalBadge(emotionalBadgeRequest.getEmotionalBadge());
     }
 
-    public FindHomeResponse findHomeData() {
-        // 현재 로그인 유저 정보 받아오기
+    public MemberHomeResponse findHomeData() {
         Member nowMember = authService.getLoginUser();
-        Family family = nowMember.getFamily();
-
-        // 현재 유저를 제외한 가족 정보 받기
-        Set<Member> familyAllMembers = family.getMembers();
-        List<FindSayingByFamilyResponse> sayingsData = familyAllMembers.stream()
-                        .map(Member::getSaying).map(sayingMapper::toResponse).toList();
-
-        familyAllMembers.removeIf(member -> member.equals(nowMember));
-
-        List<Member> familyMembers = familyAllMembers.stream()
-                .sorted(Comparator.comparing(Member::getNickname))
-                .toList();
-
-        // 각 유저의 프로필 정보 받기
-        // 본인이 맨 앞으로 정렬
-        // 나머지는 닉네임순으로 정렬
-        MemberProfileResponse membersProfileData = new MemberProfileResponse(nowMember.getId(), nowMember.getNickname(), nowMember.getProfileImage(), nowMember.getEmotionalBadge());
-        List<MemberProfileResponse> memberProfileResponses = familyMembers.stream().map(member -> new MemberProfileResponse(member.getId(), member.getNickname(), member.getProfileImage(), member.getEmotionalBadge())).collect(Collectors.toList());
-        memberProfileResponses.add(0, membersProfileData);
-
-        List<FindDDayByFamilyResponse> dDayByFamilyResponses = scheduleService.findDDayByFamily();
-
-
-        return new FindHomeResponse(family.getFamilyGroupName(),memberProfileResponses,dDayByFamilyResponses , family.getImages(), sayingsData);
+        List<ScheduleDDayResponse> dDayByFamilyResponses = scheduleService.findDDayByFamily();
+        List<SayingByFamilyResponse> sayingResponses = nowMember.getFamily().getMembers().stream()
+                .map(Member::getSaying).map(sayingMapper::toResponse).toList();
+        return memberMapper.toHomeResponse(nowMember, dDayByFamilyResponses, sayingResponses);
     }
 }
